avoid deprecated constructors